resources/public/css/style.css
/* ... */
/* Sidebar navigation */
 .nav-sidebar {
    margin-right: -21px;
    /* 20px padding + 1px border */
    margin-bottom: 20px;
    margin-left: -20px;
}
.nav-sidebar > li > a {
    padding-right: 20px;
    padding-left: 20px;
}
.nav-sidebar > .active > a, .nav-sidebar > .active > a:hover, .nav-sidebar > .active > a:focus {
    color: #fff;
    background-color: #428bca;
}

/*
 * Main content
 */
 .main {
    padding: 0px !important;
}
@media (min-width: 768px) {
    .main {
        padding-right: 40px;
        padding-left: 40px;
    }
}
.main .page-header {
    margin-top: 0;
}
/*
 * Placeholder dashboard ideas
 */
 .placeholders {
    margin-bottom: 30px;
    text-align: center;
}
.placeholders h4 {
    margin-bottom: 0;
}
.placeholder {
    margin-bottom: 20px;
}
.placeholder img {
    display: inline-block;
    border-radius: 50%;
}
span.num.red {
    color: red;
}
.form-group {
    margin-bottom: 25px;
}

/* Reset bootstrap 3.3.5 help block overflow */
.input-group[class*=col-] {
  float: left;
  padding-left: 15px;
  padding-right: 15px;
}

.hidden {
  display: none;
}

div#app {
  margin-top: 50px;
}

@media (min-width: 960px) {
  nav.navbar > div {
    width: 1170px;
    padding-left: 85px;
    padding-right: 280px;
  }
}

nav.navbar {
  background-color: white;
  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
}

nav.tab-navigation {
  margin-top: 10px;
}

div.report-list {
  margin: 0;
  margin-top: 10px;
  background-color: white;
}

div.report-list div.report-list-left {
  width: 330px;
  float: left;
  display: block;
}

div.chart-container {
  width: 600px;
}

div.report-list div.chart-container{
  margin-top: 30px;
}

div.report-panel div.chart-container {
  margin-left: -71px;
  margin-top: 0px;
}

div.report-list span.num {
  color: black;
  font-weight: bold;
}

span.num.red {
  color: red;
}

span.num.green {
  color: green;
}

div.report-list span.label, div.report-list label.label {
  color: black;
}

div.report-list label.comments-label {
  margin: 10px 0px 0px;
  padding: 0px;
  color: black;
}

label.switch-vis {
  margin: 0px 5px;
}

div.report-list input.editable-data, div.report-list input.editable-data:focus {
  outline: 0;
  border: 0px solid black;
  border-bottom: 1px solid blue;
  color: blue;
  text-align: center;
  width: 80px;
  height: 23px;
  margin: 0px 0px 5px 0px;
  padding: 0px;
}

div.report-list label.editable-label {
  width: 80px;
  color: black;
  border-bottom: 1px solid black;
  text-align: center;
  font-weight: normal;
  height: 23px;
  padding: 0px;
  margin: 0px 0px 5px 0px;
}

div.report-list textarea.comment {
  width: 200px;
  border: 1px solid black;
  padding: 5px;
  margin-top: 10px;
}

span.label{
  padding: 0;
  margin: 0;
}

span img.user-icon {
  height: 24px;
  width: 24px;
  margin-right: 5px;
}

.select2-selection span img.user-icon {
  height: 20px;
  width: 20px;
  margin-right: 5px;
}

div.composed-section i.add-metric {
  color: #707070;
  opacity: 0;
  cursor: default;
}

div.composed-section:hover i.add-metric {
  opacity: 1;
  margin-left: -30px;
  cursor: pointer;
}

div.composed-section:hover i.add-metric.no-links {
  margin-left: 5px;
}

div.composed-section h2{
  text-align: left;
}

div.composed-section h2.finances-edit-title {
  text-align: left;
  position: relative;
}

div.composed-section div.link-bar {
  text-align: left;
  z-index: 1;
  position: relative;
}

div.composed-section div.link-bar a.composed-section-link {
  text-decoration: underline;
  color: #707070;
  margin-left: 0px;
  margin-right: 60px;
  font-size: 16px;
  display: inline-block;
}

div.composed-section div.link-bar a.composed-section-link.active {
  text-decoration: none;
  color: #191919;
}

div.composed-section div.composed-section-body{
  position: relative;
}

div.composed-section div.composed-section-body div.section {
  text-align: left;
}

div.composed-section div.section div.chart-header-container {
  text-align: left;
}

div.composed-section div.section div.chart-footer-container {
  text-align: center;
}

div.composed-section div.section div.chart-header-container h3,
div.composed-section div.section div.chart-footer-container h3, {
  margin-top: 10px;
  margin-bottom: 0px;
}

div.composed-section div.section div.period-container p {
  margin-top: 10px;
  margin-bottom: 0px;
}

div.composed-section div.section div.chart-header-container div.target-actual-container{
  height: 70px;
}

div.composed-section div.section div.chart-footer-container div.target-actual-container {
  width: 150px;
  height: 70px;
  margin-left: 225px;
}

div.composed-section div.section div.chart-footer-container div.target-actual-container.double {
  width: 300px;
  margin-left: 150px;
}

div.composed-section div.section div.chart-footer-container div.actual-container {
  width: 150px;
  float: right;
}

div.composed-section div.section div.chart-header-container.chart-header div.actual-container,
div.composed-section div.section div.chart-footer-container.chart-header div.actual-container {
  float: none;
}

div.target-actual-container div.target-container h3 {
  text-align: right;
  margin-right: 15px;
}

div.target-actual-container.double div.actual-container h3 {
  text-align: left;
  margin-left: 15px;
}

div.chart-header-container div.actual-container h3.actual {
  margin-bottom: 10px;
}

div.actual-container h3.actual {
  color: #109DB7;
}

div.actual-container h3.actual.gray {
  color: #ADADAD;
}

div.actual-container h3.actual.green {
  color: #26C485;
}

div.actual-container h3.actual.red {
  color: #d72a46;
}

div.chart-header-container div.actual-container h3.actual-label {
  margin-top: 10px;
}

div.actual-container h3.actual-label {
  font-size: 12px;
  font-weight: 700;
}

div.actual-container h3.actual-label.gray {
  color: #ADADAD;
}

div.target-container {
  width: 150px;
  float: left;
}

div.target-container h3.target {
  color: #ADADAD;
}

div.target-container h3.target-label {
  font-size: 12px;
  font-weight: 700;
}
/* ... */

