fix user alignment

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -140,7 +140,7 @@ div#app {
   nav.navbar > div {
     width: 1170px;
     padding-left: 85px;
-    padding-right: 280px;
+    padding-right: 85px;
   }
 }
 
